content/reference/3.3.x/pulsar-admin/functions-worker.md
# functions-worker

Operations to collect function-worker statistics


```shell
$ pulsar-admin functions-worker subcommand
```



## function-stats

Dump all functions stats running on this broker

**Command:**

```shell
$ pulsar-admin functions-worker function-stats options
```

**Options:**

|Flag|Description|Default|
|---|---|---|
| `[-h, --help]` | Show this help message and exit.|null||
| `[-v, --version]` | Print version information and exit.|null||


## monitoring-metrics

Dump metrics for Monitoring

**Command:**

```shell
$ pulsar-admin functions-worker monitoring-metrics options
```

**Options:**

|Flag|Description|Default|
|---|---|---|
| `[-h, --help]` | Show this help message and exit.|null||
| `[-v, --version]` | Print version information and exit.|null||


## get-cluster

Get all workers belonging to this cluster

**Command:**

```shell
$ pulsar-admin functions-worker get-cluster options
```

**Options:**

|Flag|Description|Default|
|---|---|---|
| `[-h, --help]` | Show this help message and exit.|null||
| `[-v, --version]` | Print version information and exit.|null||


## get-cluster-leader

Get the leader of the worker cluster

**Command:**

```shell
$ pulsar-admin functions-worker get-cluster-leader options
```

**Options:**

|Flag|Description|Default|
|---|---|---|
| `[-h, --help]` | Show this help message and exit.|null||
| `[-v, --version]` | Print version information and exit.|null||


## get-function-assignments

Get the assignments of the functions across the worker cluster

**Command:**

```shell
$ pulsar-admin functions-worker get-function-assignments options
```

**Options:**

|Flag|Description|Default|
|---|---|---|
| `[-h, --help]` | Show this help message and exit.|null||
| `[-v, --version]` | Print version information and exit.|null||


## rebalance

Triggers a rebalance of functions to workers

**Command:**

```shell
$ pulsar-admin functions-worker rebalance options
```

**Options:**

|Flag|Description|Default|
|---|---|---|
| `[-h, --help]` | Show this help message and exit.|null||
| `[-v, --version]` | Print version information and exit.|null||

